# botman

./: .gitignore  AUTHORS  COPYING  Makefile.am  autogen.sh  configure.ac  gotham.pc.in
config/modules/: alert.conf  info.conf  services.conf  ssh_tunnel.conf  sysinfo.conf  version.conf
data/: Makefile.mk
data/config/modules/: access.conf  gdb.conf  install.conf  notification.conf  rewrite.conf  save.conf  ssh_tunnel.conf  sysinfo.conf  version.conf
data/www/: api.html  index.html  logs.html  query.html
data/www/data/css/: httpd.css
data/www/data/img/: icons.txt
data/www/data/js/: deps.js  log.js  query.js
data/www/data/tpl/: api.tpl  dash.tpl  log.tpl  query.tpl
doc/: Doxyfile  Makefile.mk  main.md  module_access.md  module_gdb.md  module_help.md  module_info.md  module_install.md  module_module.md  module_rewrite.md  module_save.md  module_seen.md  module_spam.md  module_ssh_tunnel.md  module_sysinfo.md  module_version.md
doc/data/: head.html  schema.txt
doc/data/css/: customdoxygen.css
doc/data/js/: doxy-boot.js
docs/: Gemfile  _config.yml  index.html  installation.html
docs/.bundle/: config
docs/_layouts/: default.html
docs/_modules/: access.html  alert.html  gdb.html  help.html  httpd.html  info.html  install.html  log.html  module.html  network.html  notification.html  rewrite.html  save.html  seen.html  services.html  shutdown.html  spam.html  ssh_tunnel.html  sysinfo.html  version.html
docs/css/: botman.css
m4/: building_options.m4  gcc_stack_protect.m4
pkgbuild/: PKGBUILD  alfred.service  botman.service
rpmbuild/SOURCES/: alfred.conf  alfred.init  alfred.service  alfred.sysconfig  botman-remove-platform-dir-from-gotham-modules.patch  botman.conf  botman.init  botman.service  botman.sysconfig
rpmbuild/SPECS/: botman.spec.in
src/include/: Escarg.h  Gotham.h  cJSON.h
src/lib/: Makefile.mk
src/lib/extras/escarg/: escarg_bash.c  escarg_main.c  escarg_posix.c  escarg_private.h  escarg_utils.c  escarg_windows.c
src/lib/gotham/: citizen.c  command.c  conf.c  emoticons.c  event.c  gotham.azy  gotham.c  gotham_private.h  modules.c  modules_conf.c  serialize.c  utils.c
src/modules/: Makefile.mk
src/modules/access/: access.azy  access.c  access.h  alfred.c  botman.c  citizen.c  conf.c  event.c  modules.c
src/modules/alert/: alert.azy  alert.c  alert.h  command.c
src/modules/gdb/: alfred.c  backtrace.c  botman.c  botman_delete.c  botman_fetch.c  botman_list.c  conf.c  event.c  gdb.azy  gdb.h  module.c  utils.c
src/modules/help/: event.c  help.c  help.h
src/modules/httpd/: httpd.azy  httpd.c  httpd.h  httpd_event.c  httpd_module.c  httpd_queue.c  httpd_spam.c  httpd_uri.c  httpd_uri_log.c  httpd_uri_network.c  httpd_uri_seen.c  httpd_uri_service.c  httpd_uri_spam.c  httpd_uri_stats.c  httpd_uri_stats_command_list.c  httpd_uri_uptime.c  httpd_utils.c
src/modules/info/: alfred.c  alfred_sort.c  botman.c  conf.c  event.c  info.azy  info.c  info.h  utils.c
src/modules/install/: botman.c  conf.c  event.c  install.azy  install.c  install.h  jobs.c
src/modules/log/: esql.c  event.c  event_log_query.c  log.azy  log.c  log.h
src/modules/module/: actions.c  event.c  module.c  module.h
src/modules/network/: event.c  network.azy  network.c  network.h  network_get_win32.c
src/modules/notification/: alfred.c  event.c  main.c  main.h  module.c  notification.azy  utils.c
src/modules/rewrite/: conf.c  event.c  rewrite.azy  rewrite.c  rewrite.h  utils.c
src/modules/save/: conf.c  event.c  save.azy  save.c  save.h  utils.c
src/modules/seen/: conf.c  event.c  seen.azy  seen.c  seen.h  seen_query.c  utils.c
src/modules/services/: command.c  command_win32.c  event.c  services.azy  services.c  services.h  utils.c
src/modules/shutdown/: event.c  shutdown.c  shutdown.h
src/modules/spam/: conf.c  event.c  queue.c  spam.azy  spam.c  spam.h  spam_query.c  utils.c
src/modules/ssh_tunnel/: alfred.c  botman.c  conf.c  event.c  ssh_tunnel.azy  ssh_tunnel.c  ssh_tunnel.h  utils.c
src/modules/sysinfo/: alfred.c  botman.c  conf.c  event.c  sysinfo.azy  sysinfo.c  sysinfo.h  utils.c
src/modules/version/: alfred.c  botman.c  conf.c  event.c  find.c  utils.c  version.azy  version.c  version.h
